fixed ui on mobile breakpoint and changed gallery button layout for better ux
udated ux/ui on mobile media query

--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -56,9 +56,10 @@ hr {
 .title-bar-title {
   font-weight: 400;
   letter-spacing: 0.1px;
-  padding: rem-calc(10 2);
+  padding: rem-calc(8 0);
   text-transform: uppercase;
   text-align: center;
+  font-size: rem-calc(14);
 
 }
 
@@ -80,7 +81,7 @@ hr {
 #off-canvas-nav-heading {
   color: lighten( $primary, 30% );
   text-transform: uppercase;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 #off-canvas-nav-subheading {
   color: $white;
